--- a/css/styles.css
+++ b/css/styles.css
@@ -1,30 +1,22 @@
+/*====================================
+
+
+Universal Styling
+
+
+*====================================*/
+
 * {
   margin: 0;
   padding: 0;
   border: 0;
+  box-sizing: border-box;
 }
+
 
 @font-face {
   font-family: 'among-us';
   src:url('../fonts/among-us.ttf'); format('truetype');
-}
-
-body {
-  background-image: url('../images/among-us.png');
-}
-
-main {
-  background-color: white;
-  opacity: 0.9;
-  padding: 20px 90px;
-  margin: 0 auto;
-    width: 55%
-}
-
-img {
-    margin: auto;
-    width: 100%;
-    display: block;
 }
 
 h1 {
@@ -50,10 +42,79 @@ h3 {
   text-align: center;
 }
 
+/*====================================
+
+
+Header Styling
+
+
+*====================================*/
+
+header {
+  padding: 40px 0;
+  text-align: center;
+  position: relative;
+  width: 100%
+}
+
+header nav li {
+    display: inline-block;
+    padding: 0 40px;
+}
+
+header a {
+    font-weight: bold;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: white;
+    margin: 0 20px;
+}
+
+body {
+  background-image: url('../images/among-us.png');
+}
+
+main {
+  background-color: white;
+  opacity: 0.9;
+  padding: 20px 90px;
+  margin: 0 auto;
+    width: 55%
+}
+
+img {
+    margin: auto;
+    width: 100%;
+    display: block;
+}
+
+
+
 #first {
   color: red;
 }
 
 #second {
   color: green;
+}
+
+
+p {
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 25px;
+  text-align: center;
+  font-weight: 200;
+}
+
+ol {
+  list-style-position: inside;
+  text-align: center
+}
+
+.list {
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 25px;
+  text-transform: uppercase;
+  border: 4px solid gold;
+  border-radius: 50px;
 }
