--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ Universal Styling
 
 h1 {
   font-family: 'among-us', sans-serif;
+  padding: 30px 0;
   font-weight: bold;
   font-size: 80px;
   color: white;
@@ -29,6 +30,7 @@ h1 {
 
 h2 {
   font-family: 'Amatic SC', sans-serif;
+  padding: 20px 0;
   font-weight: bolder;
   font-size: 45px;
   text-align: center;
@@ -40,6 +42,27 @@ h3 {
   text-decoration: underline;
   font-weight: bold;
   text-align: center;
+}
+
+p {
+  font-family: 'Open Sans Condensed', sans-serif;
+  padding: 20px 0;
+  font-size: 25px;
+  text-align: center;
+  font-weight: 200;
+}
+
+ol {
+  list-style-position: inside;
+  text-align: center
+}
+
+.list {
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 25px;
+  text-transform: uppercase;
+  border: 4px solid gold;
+  border-radius: 50px;
 }
 
 /*====================================
@@ -64,11 +87,25 @@ header nav li {
 
 header a {
     font-weight: bold;
+    padding: 1px 25px;
+    background-color: #e8d3eb;
     text-transform: uppercase;
     text-decoration: none;
-    color: white;
+    color: red;
     margin: 0 20px;
 }
+
+header nav a:hover {
+  background-color: cyan;
+}
+
+/*====================================
+
+
+Home Page Styling
+
+
+*====================================*/
 
 body {
   background-image: url('../images/among-us.png');
@@ -77,9 +114,14 @@ body {
 main {
   background-color: white;
   opacity: 0.9;
-  padding: 20px 90px;
+  padding: 20px 80px;
   margin: 0 auto;
-    width: 55%
+    width: 50%
+}
+
+.container {
+    max-width: 1024px;
+    margin: 0 auto;
 }
 
 img {
@@ -88,7 +130,18 @@ img {
     display: block;
 }
 
+.home-img {
+  float: right;
+  margin: 0 50px 50px;
+}
 
+/*====================================
+
+
+CSS Styling
+
+
+*====================================*/
 
 #first {
   color: red;
@@ -96,25 +149,4 @@ img {
 
 #second {
   color: green;
-}
-
-
-p {
-  font-family: 'Open Sans Condensed', sans-serif;
-  font-size: 25px;
-  text-align: center;
-  font-weight: 200;
-}
-
-ol {
-  list-style-position: inside;
-  text-align: center
-}
-
-.list {
-  font-family: 'Open Sans Condensed', sans-serif;
-  font-size: 25px;
-  text-transform: uppercase;
-  border: 4px solid gold;
-  border-radius: 50px;
 }
