--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,7 @@ header nav a:hover {
 /*====================================
 
 
-Home Page Styling
+Home Page
 
 
 *====================================*/
@@ -171,6 +171,20 @@ CSS Styling
   font-size: 60px;
   color:cyan;
 }
+
+.vent {
+  width: 200px;
+  float: right;
+}
+
+
+.top-section .hero {
+  width: 550px;
+  float: right;
+  margin-top: 30px;
+  margin-left: 40px;
+}
+
 
 @keyframes drive {
   from {
